<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditTextPreference
        android:title="@string/pref_titleText_label"
        android:key="@string/pref_titleText_key"
        android:defaultValue="@string/pref_titleText_default"
        android:inputType="text"
        android:singleLine="true" />
    <EditTextPreference
        android:title="@string/pref_hours_between_quotes_label"
        android:key="@string/pref_hours_between_quotes_key"
        android:defaultValue="@string/pref_hours_between_quotes_default"
        android:inputType="text"
        android:singleLine="true" />
    <!--
    <ListPreference
        android:title="@string/pref_units_label"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_units_default"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values" />
-->
</PreferenceScreen>